; ModuleID = '/home/carl/AnghaBench/sway/swaynag/extr_types.c_swaynag_type_free.c'
source_filename = "/home/carl/AnghaBench/sway/swaynag/extr_types.c_swaynag_type_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaynag_type = type { %struct.swaynag_type*, %struct.swaynag_type*, %struct.swaynag_type* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swaynag_type_free(%struct.swaynag_type* %0) #0 {
  %2 = alloca %struct.swaynag_type*, align 8
  store %struct.swaynag_type* %0, %struct.swaynag_type** %2, align 8
  %3 = load %struct.swaynag_type*, %struct.swaynag_type** %2, align 8
  %4 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %3, i32 0, i32 2
  %5 = load %struct.swaynag_type*, %struct.swaynag_type** %4, align 8
  %6 = call i32 @free(%struct.swaynag_type* %5)
  %7 = load %struct.swaynag_type*, %struct.swaynag_type** %2, align 8
  %8 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %7, i32 0, i32 1
  %9 = load %struct.swaynag_type*, %struct.swaynag_type** %8, align 8
  %10 = call i32 @free(%struct.swaynag_type* %9)
  %11 = load %struct.swaynag_type*, %struct.swaynag_type** %2, align 8
  %12 = getelementptr inbounds %struct.swaynag_type, %struct.swaynag_type* %11, i32 0, i32 0
  %13 = load %struct.swaynag_type*, %struct.swaynag_type** %12, align 8
  %14 = call i32 @free(%struct.swaynag_type* %13)
  %15 = load %struct.swaynag_type*, %struct.swaynag_type** %2, align 8
  %16 = call i32 @free(%struct.swaynag_type* %15)
  ret void
}

declare dso_local i32 @free(%struct.swaynag_type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
